--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD:
         ports: ["5432:5432"]
         options: >-
           --health-cmd pg_isready
@@ -48,7 +48,7 @@ jobs:
           PGHOST: localhost
           POSTGRES_DB: cities_test
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD:
         run: |
           rake db:create setup:reset
       - name: Run tests
