Change database config workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         run: |
-          rake db:create setup:reset
+          rake db:create db:migrate
       - name: Run tests
         env:
           PGHOST: localhost
