--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,13 @@ jobs:
         uses: coverallsapp/github-action@1.1.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Print the Total Coverage
+        id: coverage-percent
+        shell: bash
+        run: |
+          value=`sed -n 47p coverage/index.html | awk -F '>' '{print $2}' | awk -F '%' '{print $1}'`
+          echo "::set-output name=coverage::$value"
+          echo $value
       - name: Add Coverage Label
         uses: actions/github-script@v6
         with:
@@ -73,5 +80,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['COV: 1']
+              labels: ['COV: ${{steps.coverage-percent.outputs.coverage}}']
             })
