--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,25 +60,7 @@ jobs:
           PGPORT: ${{ job.services.postgres.ports[5432] }}
           RAILS_ENV: test
         run: bundle exec rspec
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@1.1.3
+      - name: Add Coverage
+        uses: romeovs/lcov-reporter-action@v0.2.16
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Print the Total Coverage
-        id: coverage-percent
-        shell: bash
-        run: |
-          value=`sed -n 47p coverage/index.html | awk -F '>' '{print $2}' | awk -F '%' '{print $1}'`
-          echo "::set-output name=coverage::$value"
-          echo $value
-      - name: Add Coverage Label
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            github.issues.setLabels({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              labels: ['COV: ${{steps.coverage-percent.outputs.coverage}}']
-            })
