--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,4 @@ jobs:
         uses: Nef10/lcov-reporter-action@v0.3.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          pr-number: ${{ env.pr_number }}
+          pr_number: ${{ env.pr_number }}
