--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,24 @@ jobs:
           PGPORT: ${{ job.services.postgres.ports[5432] }}
           RAILS_ENV: test
         run: bundle exec rspec
+      - name: Print the Total Coverage
+        id: coverage-percent
+        shell: bash
+        run: |
+          value=`sed -n 26p coverage/index.html | awk -F '%' '{print $1}'`
+          echo "::set-output name=coverage::$value"
+          echo $value
+      - name: Add Coverage Label
+        uses: actions/github-script@v2
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.issues.setLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['COV: ${{steps.coverage-percent.outputs.coverage}}']
+            })
       - name: Add Coverage Report
         uses: romeovs/lcov-reporter-action@v0.3.1
         with:
