Change percent total

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,15 +60,8 @@ jobs:
           PGPORT: ${{ job.services.postgres.ports[5432] }}
           RAILS_ENV: test
         run: bundle exec rspec
-      - name: Print the Total Coverage
-        id: coverage-percent
-        shell: bash
-        run: |
-          value=`sed -n 26p coverage/index.html | awk -F '%' '{print $1}'`
-          echo "::set-output name=coverage::$value"
-          echo $value
       - name: Print the Total Coverage Json
-        id: coverage-percent-json
+        id: coverage-percent
         shell: bash
         run: |
           value=`jq .metrics.covered_percent coverage/coverage.json | xargs printf '%.2f\n'`
@@ -79,11 +72,12 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
+            console.log('${{steps.coverage-percent.outputs.coverage}}')
             github.issues.setLabels({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['COV: ${{steps.coverage-percent-json.outputs.coverage}}']
+              labels: ['COV: ${{steps.coverage-percent.outputs.coverage}}']
             })
       - name: Add Coverage Report
         uses: romeovs/lcov-reporter-action@v0.3.1
